# pdf-rag-chat

./: .gitignore  README.md  docker-compose.yml
backend/: README.md  ingest.py  main.py  pyproject.toml  requirements.txt
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
