[project]
name = "backend"
version = "0.1.0"
description = "PDF RAG Chat Backend"
authors = [
    {name = "Teemu", email = "[EMAIL_ADDRESS]"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.2",
    "python-dotenv>=1.0.0",
    # LangChain & RAG components
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=0.1.10",
    # Claude Integration
    "langchain-anthropic>=0.0.6",
    # Vector Store (Qdrant)
    "qdrant-client>=1.6.0",
    # Embedding Models (HuggingFace)
    "sentence-transformers>=2.2.0",
    "langchain-huggingface>=0.1.2",
    # PDF Processing
    "pypdf>=3.16.2",
    "langchain-text-splitters>=1.1.2",
    "langchain-qdrant>=1.1.0",
]
